2013-05-23	Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Change
	functions where watchdog breakpoints are set from 'abort' and '_exit' to
	'exit' and '_exit_r', use NSIM_HOME environment variable to start nsim_gdb
	instance, use option -reconnect of nsim_gdb, use only a limited range of
	TCP ports for GDB communication.

2013-05-14  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Explicitly choose /bin/sh.
	* build-all.sh: Change == to = in tests throughout.
	* build-elf32.sh: Change == to = in tests throughout.
	* check-results.sh: Change == to = in tests throughout, use
	/bin/sh, not /bin/bash.
	* diff-all.sh: Use /bin/sh, not /bin/bash.
	* diff-tests.sh: Likewise
	* get-ip.sh: Change == to = in tests throughout, use
	/bin/sh, not /bin/bash.

2013-05-09  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: No need to delete C++ libraries.
	* check-results.sh: Better alignment for 6 digit totals.

2013-05-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Do not explicitly use --enable-multilib when
	configuring, since it is the default and being explicit triggers
	PR45174.

2013-04-30  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-nsim.exp: Load nsim-extra.exp, initialize
	port with nsim_open.
	* dejagnu/nsim-extra.exp: New file.

2013-04-29  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Fix typo in test of DO_SIM.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Some improvements for Linux 3.8.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-sim.ex: Remove redundant use of
	arc-sim-base.
	* dejagnu/baseboards/arc-nsim.exp: New file.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --sim/--no-sim
	* build-elf32.sh: Optionally build the simulator, depending on
	DO_SIM environment variable.
